# import-expenses

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  decisions.md  formats.md  prompts.md  requirements.md
src/import_expenses/: __main__.py  cli.py  inter_checking_account.py  inter_credit_card.py  minhas_financas.py
tests/: test_cli.py  test_inter_credit_card.py
tests/fixtures/: inter_checking_account.ofx  inter_credit_card_invoice.csv
tests/integration/: test_inter_checking_account_flow.py  test_inter_credit_card_flow.py
tests/unit/: test_cli.py  test_inter_checking_account.py  test_inter_credit_card.py  test_minhas_financas.py
