[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "import-expenses"
version = "0.1.0"
description = "Minimal CLI for importing expenses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
import-expenses = "import_expenses.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
